--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "magazine",
+  "name": "digital-magazine",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,17 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.2",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.7.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
+    "multer": "^2.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-pageflip": "^2.0.3",
-    "react-router-dom": "^7.7.0",
-    "swiper": "^11.2.10"
+    "react-router-dom": "^7.7.1",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
