--- a/package.json
+++ b/package.json
@@ -5,18 +5,28 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.8",
     "multer": "^2.0.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-pageflip": "^2.0.3",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.7.1",
     "react-scroll": "^1.9.3"
   },
