--- a/package.json
+++ b/package.json
@@ -7,20 +7,28 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && firebase deploy",
+    "deploy:hosting": "npm run build && firebase deploy --only hosting"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "motion": "^12.23.18",
     "multer": "^2.0.2",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-pageflip": "^2.0.3",
     "react-router-dom": "^7.7.1",
-    "react-scroll": "^1.9.3"
+    "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
